Fix readability of environment in console output, add basic media queries

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,13 +85,47 @@ input {
 .align-center{
     text-align: center;
 }
-
-@include respond-to(mobile) {
-    .mobile-hide {
-        display: none;
+@include respond-to(not-mobile) {
+    .mobile-only,
+    .mobile {
+        display: none !important;
     }
 }
 
+@include respond-to(desktop) {
+    .not-desktop {
+        display: none !important;
+    }
+
+    html,
+    body {
+        font-size: 2.0vmin;
+    }
+}
+
+@include respond-to(tablet) {
+    .desktop-only {
+        display: none !important;
+    }
+    html,
+    body {
+        font-size: 2.5vmin;
+    }
+}
+
+@include respond-to(mobile) {
+    html,
+    body {
+        font-size: 4vmin;
+    }
+
+    .desktop-only,
+    .desktop {
+        display: none !important;
+    }
+
+    .mobile-hide { display: none !important; }
+}
 /*=======================*\
 ||  Input/Button styles  ||
 \*=======================*/
