--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,6 @@ body{
 }
 
 html,
-.app,
 body {
     margin:0;
     padding:0;
